plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.1'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'github'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
    //    ++ Payment(아임포트-포트원) 관련: 추가!
    maven { url 'https://jitpack.io' }
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    // OAuth2 Authorization Server
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-authorization-server'
    // WebSocket
    implementation 'org.springframework.boot:spring-boot-starter-websocket'
    // Lombok
    compileOnly 'org.projectlombok:lombok'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    // Validation
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    // Jackson
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.16.1'
    // JWT
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
    implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'
    // Cache
    implementation 'org.springframework.boot:spring-boot-starter-cache'
    // MariaDB
    runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
    implementation 'org.mariadb.jdbc:mariadb-java-client:3.1.0'
    // 아임포트
    implementation 'com.github.iamport:iamport-rest-client-java:0.2.21'
    // AWS S3
    implementation 'io.awspring.cloud:spring-cloud-aws-starter:3.1.1'
    implementation 'software.amazon.awssdk:s3:2.20.0'
    // SpringDoc open api
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'
    // @ConfigurationProperties
    annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
    useJUnitPlatform()
}
